// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderToHTML should correctly generate html from component base jsx structure 1`] = `
"<html>
  <head>
    <meta charset=\\"utf-8\\">
    </meta>
    <meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\">
    </meta>
    <title>
      Page Title
    </title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    </meta>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" media=\\"screen\\" href=\\"main.css\\">
    </link>
  </head>
  <body>
    <div class=\\"main-container\\">
        <h2>
          Hello World!
        </h2>
        <input value=\\"write here\\">
        </input>
        <button style>
          Submit
        </button>
    </div>
  </body>
</html>"
`;

exports[`renderToHTML should correctly generate html from simple jsx 1`] = `
"<div id=\\"container\\" class=\\"bordered active\\">
  <h1>
    Hello World
  </h1>
  <h2>
    Prop Title
  </h2>
  <button onclick=\\"console.log(&quot;Hello World!&quot;)\\">
  </button>
</div>"
`;

exports[`renderToHTML should correctly parse async components 1`] = `
"<html>
  <head>
    <meta charset=\\"utf-8\\">
    </meta>
    <meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\">
    </meta>
    <title>
      Page Title
    </title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    </meta>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" media=\\"screen\\" href=\\"main.css\\">
    </link>
  </head>
  <body>
    <div class=\\"main-container\\">
        <h2>
          Async title
        </h2>
        <input value=\\"write here\\">
        </input>
        <button style>
          Submit
        </button>
    </div>
  </body>
</html>"
`;

exports[`renderToHTML should correctly render jsx with arrays in between elements 1`] = `
"<div>
  <h1>
    Header
  </h1>
  <p>
    0
  </p>
  <p>
    1
  </p>
  <footer>
  </footer>
</div>"
`;
